--- a/your-code/pandas_1_concat-merge-join.ipynb
+++ b/your-code/pandas_1_concat-merge-join.ipynb
@@ -41,12 +41,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
+    "\n",
     "df1 = pd.DataFrame({'A': ['a'+str(x) for x in range(3)],\n",
     "                    'B': ['b'+str(x) for x in range(3)],\n",
     "                    'C': ['c'+str(x) for x in range(3)]},\n",
@@ -79,11 +81,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Concatenated df1 and df2:\n",
+      "    A   B   C\n",
+      "0  a0  b0  c0\n",
+      "1  a1  b1  c1\n",
+      "2  a2  b2  c2\n",
+      "3  a3  b3  c3\n",
+      "4  a4  b4  c4\n",
+      "5  a5  b5  c5\n",
+      "\n",
+      "Concatenated df3 and df4:\n",
+      "    D   E   F\n",
+      "0  d0  e0  f0\n",
+      "1  d1  e1  f1\n",
+      "2  d2  e2  f2\n",
+      "3  d3  e3  f3\n",
+      "4  d4  e4  f4\n",
+      "5  d5  e5  f5\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "concat_df1_df2 = pd.concat([df1, df2])\n",
+    "\n",
+    "concat_df3_df4 = pd.concat([df3, df4])\n",
+    "\n",
+    "print(\"Concatenated df1 and df2:\")\n",
+    "print(concat_df1_df2)\n",
+    "\n",
+    "print(\"\\nConcatenated df3 and df4:\")\n",
+    "print(concat_df3_df4)"
    ]
   },
   {
@@ -99,11 +134,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Concatenated df1, df2, df3, and df4:\n",
+      "     A    B    C    D    E    F\n",
+      "0   a0   b0   c0  NaN  NaN  NaN\n",
+      "1   a1   b1   c1  NaN  NaN  NaN\n",
+      "2   a2   b2   c2  NaN  NaN  NaN\n",
+      "3   a3   b3   c3  NaN  NaN  NaN\n",
+      "4   a4   b4   c4  NaN  NaN  NaN\n",
+      "5   a5   b5   c5  NaN  NaN  NaN\n",
+      "0  NaN  NaN  NaN   d0   e0   f0\n",
+      "1  NaN  NaN  NaN   d1   e1   f1\n",
+      "2  NaN  NaN  NaN   d2   e2   f2\n",
+      "3  NaN  NaN  NaN   d3   e3   f3\n",
+      "4  NaN  NaN  NaN   d4   e4   f4\n",
+      "5  NaN  NaN  NaN   d5   e5   f5\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "concat_all = pd.concat([df1, df2, df3, df4], sort=False)\n",
+    "\n",
+    "print(\"Concatenated df1, df2, df3, and df4:\")\n",
+    "print(concat_all)"
    ]
   },
   {
@@ -122,11 +182,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Concatenated df1, df2, df3, and df4 with ignore_index=True:\n",
+      "      A    B    C    D    E    F\n",
+      "0    a0   b0   c0  NaN  NaN  NaN\n",
+      "1    a1   b1   c1  NaN  NaN  NaN\n",
+      "2    a2   b2   c2  NaN  NaN  NaN\n",
+      "3    a3   b3   c3  NaN  NaN  NaN\n",
+      "4    a4   b4   c4  NaN  NaN  NaN\n",
+      "5    a5   b5   c5  NaN  NaN  NaN\n",
+      "6   NaN  NaN  NaN   d0   e0   f0\n",
+      "7   NaN  NaN  NaN   d1   e1   f1\n",
+      "8   NaN  NaN  NaN   d2   e2   f2\n",
+      "9   NaN  NaN  NaN   d3   e3   f3\n",
+      "10  NaN  NaN  NaN   d4   e4   f4\n",
+      "11  NaN  NaN  NaN   d5   e5   f5\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "concat_all_ignore_index = pd.concat([df1, df2, df3, df4], sort=False, ignore_index=True)\n",
+    "\n",
+    "print(\"Concatenated df1, df2, df3, and df4 with ignore_index=True:\")\n",
+    "print(concat_all_ignore_index)"
    ]
   },
   {
@@ -150,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,9 +407,36 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Merged DataFrame using 'merge':\n",
+      "  idx   A   B   C   D\n",
+      "0  i1  a1  b1  c1  d1\n",
+      "1  i2  a2  b2  c2  d2\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "left = pd.DataFrame({'idx': ['i'+str(x) for x in range(3)],\n",
+    "                     'A': ['a'+str(x) for x in range(3)],\n",
+    "                     'B': ['b'+str(x) for x in range(3)]})\n",
+    "\n",
+    "right = pd.DataFrame({'idx': ['i'+str(x) for x in range(1, 4)],\n",
+    "                      'C': ['c'+str(x) for x in range(1, 4)],\n",
+    "                      'D': ['d'+str(x) for x in range(1, 4)]})\n",
+    "\n",
+    "merged_df = pd.merge(left, right, on='idx', how='inner')\n",
+    "\n",
+    "print(\"Merged DataFrame using 'merge':\")\n",
+    "print(merged_df)"
    ]
   },
   {
@@ -366,15 +478,40 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     A    B    C    A    B    C    D    E    F    D    E    F\n",
+      "0   a0   b0   c0  NaN  NaN  NaN   d0   e0   f0  NaN  NaN  NaN\n",
+      "1   a1   b1   c1  NaN  NaN  NaN   d1   e1   f1  NaN  NaN  NaN\n",
+      "2   a2   b2   c2  NaN  NaN  NaN   d2   e2   f2  NaN  NaN  NaN\n",
+      "3  NaN  NaN  NaN   a3   b3   c3  NaN  NaN  NaN   d3   e3   f3\n",
+      "4  NaN  NaN  NaN   a4   b4   c4  NaN  NaN  NaN   d4   e4   f4\n",
+      "5  NaN  NaN  NaN   a5   b5   c5  NaN  NaN  NaN   d5   e5   f5\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "result = pd.concat([df1, df2, df3, df4], axis=1)\n",
+    "\n",
+    "# Print the result\n",
+    "print(result)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -388,7 +525,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.4"
   },
   "toc": {
    "base_numbering": 1,
